--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p><img src="img/A.jpg" alt="Aセット"></p>
         <div class="wapper">
             <div class="main">
-                <div id="rouletteA">
+                <div id="rouletteA" class="roulette">
                     <p id="winA" class="win">当たれ～！</p>
                 </div>
                 <div class="buttons">
@@ -32,7 +32,7 @@
         <p><img src="img/B.jpg" alt="Bセット"></p>
         <div class="wapper">
             <div class="main">
-                <div id="rouletteB">
+                <div id="rouletteB" class="roulette">
                     <p id="winB" class="win">当たれ～！</p>
                 </div>
                 <div class="buttons">
@@ -48,7 +48,7 @@
         <p><img src="img/C.jpg" alt="Cセット"></p>
         <div class="wapper">
             <div class="main">
-                <div id="rouletteC">
+                <div id="rouletteC" class="roulette">
                     <p id="winC" class="win">当たれ～！</p>
                 </div>
                 <div class="buttons">
