--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="set-container">
     <div class="set">
         <h2 class="set-title">Aセット</h2>
-        <p><img src="img/A.jpg" alt="Aセット"></p>
+        <p><img src="img/toge.jpg" alt="Aセット"></p>
         <div class="wapper">
             <div class="main">
                 <div id="rouletteA" class="roulette">
@@ -27,7 +27,7 @@
         </div>
     </div>
     
-    <div class="set">
+    <!-- <div class="set">
         <h2 class="set-title">Bセット</h2>
         <p><img src="img/B.jpg" alt="Bセット"></p>
         <div class="wapper">
@@ -57,7 +57,7 @@
                 </div>
             </div>  
         </div>
-    </div>
+    </div> -->
     
 </div>
 
