--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 class="title">ふんばりルーレット</h1>
 <div class="set-container">
     <div class="set">
-        <h2 class="set-title">Aセット</h2>
+        <h2 class="set-title">棘セット</h2>
         <p><img src="img/toge.jpg" alt="Aセット"></p>
         <div class="wapper">
             <div class="main">
